--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #ecb2e5;
+  color: #0563bb;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ecb2e5;
+  color: #0563bb;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #ecb2e5;
+  background: #0563bb;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,7 +57,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #ecb2e5;
+  background: #0563bb;
   color: #fff;
 }
 
@@ -85,7 +85,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #ecb2e5;
+  border: 6px solid #0563bb;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -211,7 +211,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   color: #fff;
-  background: #ecb2e5;
+  background: #0563bb;
 }
 
 .nav-menu a:hover span,
@@ -265,7 +265,7 @@ h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #ecb2e5;
+  background-color: #0563bb;
 }
 
 /*--------------------------------------------------------------
@@ -311,7 +311,7 @@ h6 {
 }
 
 #hero p span {
-  color: #ecb2e5;
+  color: #0563bb;
   letter-spacing: 1px;
 }
 
@@ -329,7 +329,7 @@ h6 {
 }
 
 #hero .social-links a:hover {
-  color: #ecb2e5;
+  color: #0563bb;
 }
 
 @media (max-width: 992px) {
@@ -389,7 +389,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #ecb2e5;
+  background: #0563bb;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -425,7 +425,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #ecb2e5;
+  color: #0563bb;
   line-height: 0;
 }
 
@@ -451,7 +451,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #ecb2e5;
+  background: #0563bb;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -508,7 +508,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #ecb2e5;
+  background-color: #0563bb;
 }
 
 /*--------------------------------------------------------------
@@ -525,7 +525,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #ecb2e5;
+  border-left: 2px solid #0563bb;
   position: relative;
 }
 
@@ -535,7 +535,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #ecb2e5;
+  color: #0563bb;
   margin-bottom: 10px;
 }
 
@@ -569,7 +569,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #ecb2e5;
+  border: 2px solid #0563bb;
 }
 
 /*--------------------------------------------------------------
@@ -604,7 +604,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #ecb2e5;
+  color: #0563bb;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -704,7 +704,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #ecb2e5;
+  color: #0563bb;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -750,11 +750,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ecb2e5;
+  border: 1px solid #0563bb;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ecb2e5;
+  background-color: #0563bb;
 }
 
 .portfolio-details .portfolio-info {
@@ -856,7 +856,7 @@ section {
 }
 
 .services .iconbox-blue i {
-  color: #ecb2e5;
+  color: #0563bb;
 }
 
 .services .iconbox-blue:hover .icon i {
@@ -864,7 +864,7 @@ section {
 }
 
 .services .iconbox-blue:hover .icon path {
-  fill: #ecb2e5;
+  fill: #0563bb;
 }
 
 .services .iconbox-orange i {
@@ -997,11 +997,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ecb2e5;
+  border: 1px solid #0563bb;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ecb2e5;
+  background-color: #0563bb;
 }
 
 @media (min-width: 992px) {
@@ -1020,7 +1020,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #ecb2e5;
+  color: #0563bb;
   float: left;
   width: 44px;
   height: 44px;
@@ -1055,7 +1055,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #ecb2e5;
+  background: #0563bb;
   color: #fff;
 }
 
@@ -1126,7 +1126,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #ecb2e5;
+  background: #0563bb;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1135,7 +1135,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #ecb2e5;
+  background: #0563bb;
 }
 
 @keyframes animate-loading {
@@ -1182,7 +1182,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #ecb2e5;
+  background: #0563bb;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1195,7 +1195,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #ecb2e5;
+  background: #0563bb;
   color: #fff;
   text-decoration: none;
 }
